<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:gravity="start"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:inputType="text"
            android:imeOptions="actionNext"
            android:id="@+id/stu_et_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/stu_name"/>

        <EditText
            android:inputType="text"
            android:imeOptions="actionNext"
            android:id="@+id/stu_et_parent"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/parent_name"/>

        <EditText
            android:hint="@string/phone"
            android:id="@+id/stu_et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/stu_et_school"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="School Name"/>

        <EditText
            android:id="@+id/stu_et_class"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Class of study"/>

        <Button
            android:onClick="onClickStudentRegistration"
            android:text="Submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/button_style"/>

    </LinearLayout>
</ScrollView>