<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <EditText
        android:drawableLeft="@drawable/email1"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="Email / Phone"/>

    <EditText
        android:drawableLeft="@drawable/password1"
        android:imeOptions="actionNext"
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:inputType="textPassword"
        android:hint="Password"/>

    <Button
        android:onClick="onClickLogin"
        android:text="@string/login"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        style="@style/button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

        <LinearLayout
            android:gravity="right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:onClick="onClickFogotPassword"
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fogot_password"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_yet_registered"/>

            <Button
                android:onClick="onClickRegister"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/click_here"/>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SIGN IN WITH"/>

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/login_with_google"
            android:text="Login with Google"
            android:layout_width="150dp"
            android:layout_height="56dp" />


    </LinearLayout>
        </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/line_shape"/>

        <TextView
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OR"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/line_shape"/>

    </LinearLayout>

    <EditText
        android:drawableLeft="@drawable/phone"
        android:id="@+id/login_phone"
        android:layout_marginTop="10dp"
        android:hint="@string/phone"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:inputType="phone"/>

    <Button
        android:layout_marginTop="5dp"
        android:text="@string/otp_sign_in"
        android:layout_gravity="center"
        style="@style/button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>

</ScrollView>